--- a/_config.yml
+++ b/_config.yml
@@ -78,11 +78,8 @@ theme: yilia
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  branch: master
-  # repo: 
-    # github: git@github.com:feiyyx/feiyyx.github.io.git,master
-    # coding: git@e.coding.net:fe1yyx/fe1yyx.coding.me.git,master
-  
+  repo: git@github.com:feiyyx/feiyyx.github.io.git
+  branch: gh-pages
 
 jsonContent:
     meta: false
